# puffins

./: .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  DOCS_ROADMAP.md  README.md  RELEASING.md  TESTING_ROADMAP.md  pyproject.toml  setup.py
.claude/: settings.local.json
.claude/skills/wrap-up/: SKILL.md
.github/workflows/: ci.yml  claude-code-review.yml  publish.yml
docs/: conf.py  index.rst  installation.rst
docs/api/: bootstrap.rst  budget_adj.rst  calculus.rst  constants.rst  dates.rst  dynamics.rst  eofs.rst  eq_area.rst  fixed_temp_tropo.rst  grad_bal.rst  had_cell.rst  held_hou_1980.rst  hides.rst  index.rst  interp.rst  kuo_el.rst  lcl.rst  lindzen_hou_1988.rst  longitude.rst  names.rst  nb_utils.rst  num_solver.rst  plotting.rst  plumb_hou_1992.rst  polar_amp.rst  radiation.rst  stats.rst  therm_inert.rst  thermodynamics.rst  tropopause.rst  vert_coords.rst
docs/roadmaps/: 001-modernize-repo-standards.md  002-documentation.md  002-testing-overhaul.md  002-type-hints.md  003-type-hints.md  004-testing-overhaul.md  README.md
puffins/: __init__.py  _typing.py  bootstrap.py  budget_adj.py  calculus.py  constants.py  dates.py  dynamics.py  eofs.py  eq_area.py  fixed_temp_tropo.py  grad_bal.py  had_cell.py  had_cell_edges.py  held_hou_1980.py  hides.py  interp.py  kuo_el.py  lcl.py  lindzen_hou_1988.py  longitude.py  names.py  nb_utils.py  num_solver.py  plotting.py  plumb_hou_1992.py  polar_amp.py  radiation.py  stats.py  therm_inert.py  thermodynamics.py  tropopause.py  vert_coords.py
puffins/scripts/: set_proj_puff_branch.py
puffins/tests/: test_bootstrap.py  test_budget_adj.py  test_calculus.py  test_dates.py  test_dynamics.py  test_eofs.py  test_eq_area.py  test_grad_bal.py  test_had_cell.py  test_hides.py  test_interp.py  test_kuo_el.py  test_lcl.py  test_longitude.py  test_num_solver.py  test_plumb_hou_1992.py  test_polar_amp.py  test_radiation.py  test_stats.py  test_therm_inert.py  test_thermodynamics.py  test_tropopause.py  test_typing_overloads.py  test_vert_coords.py
