[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "puffins"
dynamic = ["version"]
description = "Functions for computing things in climate science"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Spencer A. Hill", email = "shill1@ccny.cuny.edu" }]
keywords = ["climate", "science"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
  "eofs",
  "faceted",
  "gitpython",
  "matplotlib",
  "numpy",
  "pymannkendall",
  "scipy",
  "scikit-learn",
  "statsmodels",
  "xarray",
]

[project.optional-dependencies]
# windspharm/pyspharm require a Fortran compiler and legacy numpy.distutils.
# Install via: conda install -c conda-forge windspharm
fortran = ["windspharm"]
dev = [
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/spencerahill/puffins"

[tool.setuptools.packages.find]
include = ["puffins*"]

[tool.setuptools_scm]

[project.scripts]
set-proj-puff-branch = "puffins.scripts.set_proj_puff_branch:main"

# --- Tool Configuration ---

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "NPY", # numpy-specific rules
]
ignore = [
  # TODO: tighten these incrementally
  "F401",   # unused imports (many are intentional re-exports)
  "F811",   # redefined unused name
  "F821",   # undefined name (cross-module references)
  "F841",   # local variable assigned but never used
  "E501",   # line too long (formatter handles most; a few remain)
  "E741",   # ambiguous variable name (common in math/physics code)
  "B904",   # raise ... from err (requires code audit)
  "B905",   # zip() without strict= (requires code audit)
  "SIM108", # use ternary operator (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports are intentional

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["puffins/tests"]
addopts = "-v --tb=short"


[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Strict checking for fully type-annotated modules.
# Add modules here as they complete type annotation.
[[tool.mypy.overrides]]
module = [
    "puffins._typing",
    "puffins.calculus",
    "puffins.constants",
    "puffins.dates",
    "puffins.dynamics",
    "puffins.hides",
    "puffins.interp",
    "puffins.longitude",
    "puffins.names",
    "puffins.num_solver",
    "puffins.radiation",
    "puffins.thermodynamics",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
